--- a/app/src/main/res/layout/activity_minus.xml
+++ b/app/src/main/res/layout/activity_minus.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#B0BDFF"
     tools:context=".MinusActivity">
 
     <TextView
